# kirice2

./: .gitignore  README.md
fitness-rpg-app/: BUILD_INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
fitness-rpg-app/backend/: exercises_db.json
fitness-rpg-app/src/: App.tsx  index.css
fitness-rpg-app/src-tauri/: Cargo.toml  tauri.conf.json
fitness-rpg-app/src-tauri/src/: lib.rs  main.rs
fitness-rpg-app/src/components/: CharacterSVG.tsx  StatsPanel.tsx
fitness_rpg/: README.md
fitness_rpg/app/: index.html  main.js  styles.css
fitness_rpg/backend/: config.json  database.py  database_schema.sql  exercises_db.json  fitness_rpg.db  models.py  progression.py
fitness_rpg/docs/: MATHEMATICAL_MODELS.md
rpg_fitness/: README.md  README_GUI.md  README_RU.md  cli.py  exercises_db.py  gui_app.py  progression.py  rpg_fitness.desktop  run.sh  run_windows.bat
rpg_fitness_web/: README.md
rpg_fitness_web/backend/: api.py  config.py  database.py
rpg_fitness_web/backend/data/: default.json
rpg_fitness_web/frontend/: character-status.html  index.html
server/: db.js  index.js  test-bd.js
server/middleware/: auth.js
server/routes/: components.js  lkm.js  users.js
